// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<span
  class="yozora-text custom-class"
  style="color:orange"
>
  Hello, world!
</span>
`;

exports[`snapshot default 1`] = `
<span
  class="yozora-text"
>
  Hello, world!
</span>
`;
